--- a/.github/workflows/grass_auto_build-push.yml
+++ b/.github/workflows/grass_auto_build-push.yml
@@ -56,15 +56,15 @@ jobs:
 
 
       - name: Setup QEMU
-        if: steps.grass-version-check.outputs.grass_build == 'true' || steps.grass-node-version-check.outputs.grass_node_build == 'true' || steps.grass-desktop-version-check.outputs.grass_desktop_build == 'true'
+        #if: steps.grass-version-check.outputs.grass_build == 'true' || steps.grass-node-version-check.outputs.grass_node_build == 'true' || steps.grass-desktop-version-check.outputs.grass_desktop_build == 'true'
         uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
-        if: steps.grass-version-check.outputs.grass_build == 'true' || steps.grass-node-version-check.outputs.grass_node_build == 'true' || steps.grass-desktop-version-check.outputs.grass_desktop_build == 'true'
+        #if: steps.grass-version-check.outputs.grass_build == 'true' || steps.grass-node-version-check.outputs.grass_node_build == 'true' || steps.grass-desktop-version-check.outputs.grass_desktop_build == 'true'
         uses: docker/setup-buildx-action@v3
 
       - name: Login to DockerHub
-        if: steps.grass-version-check.outputs.grass_build == 'true' || steps.grass-node-version-check.outputs.grass_node_build == 'true' || steps.grass-desktop-version-check.outputs.grass_desktop_build == 'true'
+        #if: steps.grass-version-check.outputs.grass_build == 'true' || steps.grass-node-version-check.outputs.grass_node_build == 'true' || steps.grass-desktop-version-check.outputs.grass_desktop_build == 'true'
         uses: docker/login-action@v3
         with: 
           username: ${{ secrets.DOCKER_USERNAME }}
@@ -74,7 +74,7 @@ jobs:
 
       - name: Build and Push Grass-Desktop Image
         # Grass Desktop builds if grass_desktop_build == true (forced or version changed)
-        if: steps.grass-desktop-version-check.outputs.grass_desktop_build == 'true'
+        #if: steps.grass-desktop-version-check.outputs.grass_desktop_build == 'true'
         uses: docker/build-push-action@v6
         with:
           file: "grass-desktop.dockerfile"
