--- a/.github/workflows/grass_auto_build-push.yml
+++ b/.github/workflows/grass_auto_build-push.yml
@@ -19,7 +19,8 @@ env:
   GRASS_IMAGE_NAME: 'qnistar/grass'
   GRASS_NODE_IMAGE_NAME: 'qnistar/grass-node'
   GRASS_DESKTOP_IMAGE_NAME: 'qnistar/grass-desktop'
-  TAG: 'latest'
+  #TAG: 'latest'
+  TAG: '5.1.0'
   MAX_DELAY: 30
   GRASS_VERSION_FILE_PATH: '.githubworkflows.grass_current_version'
   GRASS_NODE_VERSION_FILE_PATH: '.githubworkflows.grass-node_current_version'
