--- a/.github/workflows/grass_auto_build-push.yml
+++ b/.github/workflows/grass_auto_build-push.yml
@@ -6,8 +6,8 @@ name: Docker Build and Push
 # documentation.
 
 on: 
-  schedule:
-    - cron: '0 0 * * *' # Runs at 00:00 UTC daily
+  #schedule:
+    #- cron: '0 0 * * *' # Runs at 00:00 UTC daily
   # push:
   #   branches: [ "main" ]
   workflow_dispatch:
