--- a/.github/workflows/grass_auto_build-push.yml
+++ b/.github/workflows/grass_auto_build-push.yml
@@ -21,7 +21,8 @@ env:
   GRASS_DESKTOP_IMAGE_NAME: 'qnistar/grass-desktop'
   #TAG: 'latest'
   #TAG: '5.1.0'
-  TAG: '4.32.0'
+  #TAG: '4.32.0'
+  TAG: '5.1.1'
   
   MAX_DELAY: 30
   GRASS_VERSION_FILE_PATH: '.githubworkflows.grass_current_version'
